force-app/main/default/objects/DataQualityIssue__c/DataQualityIssue__c.object-meta.xml
<CustomObject>
    <label>Data Quality Issue</label>
    <pluralLabel>Data Quality Issues</pluralLabel>
    <nameField>
        <displayFormat>DQ-{0000}</displayFormat>
        <label>Data Quality Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>