force-app/main/default/objects/DataQualityIssue__c/fields/DetectedDate__c.field-meta.xml
<CustomField>
    <fullName>DetectedDate__c</fullName>
    <label>Detected Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>