force-app/main/default/objects/DataQualityIssue__c/fields/FixedDate__c.field-meta.xml
<CustomField>
    <fullName>FixedDate__c</fullName>
    <label>Fixed Date</label>
    <type>DateTime</type>
</CustomField>