force-app/main/default/objects/DataQualityIssue__c/fields/IssueDescription__c.field-meta.xml
<CustomField>
    <fullName>IssueDescription__c</fullName>
    <label>Issue Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>