force-app/main/default/objects/DataQualityIssue__c/fields/IssueSeverity__c.field-meta.xml
<CustomField>
    <fullName>IssueSeverity__c</fullName>
    <label>Issue Severity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>