force-app/main/default/objects/DataQualityIssue__c/fields/IssueType__c.field-meta.xml
<CustomField>
    <fullName>IssueType__c</fullName>
    <label>Issue Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Invalid Email</fullName>
            </value>
            <value>
                <fullName>Invalid Phone</fullName>
            </value>
            <value>
                <fullName>Missing Required Field</fullName>
            </value>
            <value>
                <fullName>Orphaned Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>