force-app/main/default/objects/DataQualityIssue__c/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>Object Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>