force-app/main/default/objects/DataQualityIssue__c/fields/RecordOwner__c.field-meta.xml
<CustomField>
    <fullName>RecordOwner__c</fullName>
    <label>Record Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>